Fixes error with missing file
tgz file for game analytics had absolute path in the config, which made
the job to fail, as the file isn't on the CI. This commit adds the file
to the repo, so that the CI can successfully locate the file.

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.gameanalytics.sdk": "7.10.4",
-    "com.google.external-dependency-manager": "file:D:/useful_stuff/com.google.external-dependency-manager-1.2.186.tgz",
+    "com.google.external-dependency-manager": "file:com.google.external-dependency-manager-1.2.186.tgz",
     "com.luca3317.tmpeffects": "https://github.com/Luca3317/TMPEffects.git?path=/Package",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.2d": "2.0.1",
