Separates cleanup to the separate step and calls it from the repo to avoid checkout before cleaning up

--- a/.github/workflows/build_action.yml
+++ b/.github/workflows/build_action.yml
@@ -4,15 +4,11 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+    
+  # Allows to reuse this workflow in other workflows
+  workflow_call:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -23,17 +19,20 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      
-      # Cleanup
-      - name: cleanup project
-        uses: iovorobiev-games/unity_project_template/.github/workflows/cleanup.yml@main
-     
-      # Checkout
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # Cache
+      - uses: actions/cache@v3
         with:
-          lfs: true
+          path: Library
+          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+          restore-keys: |
+            Library-
 
       # Build
-      - name: Build job
-        uses: ./.github/workflows/build_action.yml
+      - name: Build project
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          targetPlatform: WebGL
