--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,10 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  checkout:
-    name: Checkout project
+  build:
+    name: Builds project and uploads artifact
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: cleanup_project
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
