--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -13,28 +13,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Cleanup
-  cleanup_project:
-    uses: iovorobiev-games/unity_project_template/.github/workflows/cleanup.yml@main
-  
-  # This workflow contains a single job called "build"
-  checkout:
-    name: Checkout project
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    needs: cleanup_project
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checkout
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          lfs: true
-
   build:
-    uses: ./.github/workflows/build_action.yml
-    needs: checkout
+    uses: ./.github/workflows/build.yml
   
   deploy:
     name: Deploy project
@@ -43,9 +23,10 @@ jobs:
     needs: build
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Zip release build
-      - name: Zip
-        run: sudo zip -r build/html.zip  build/WebGL
+      - uses: actions/download-artifact@v5
+        with:
+          name: html${{ github.head_ref }}.${{ github.sha }}
+          path: ./
 
       - name: Upload to itch
         uses: Ayowel/butler-to-itch@v1
@@ -55,4 +36,4 @@ jobs:
           itch_game: ${{ vars.ITCH_GAME }}
           version: ${{ github.ref_name }}
           files: |
-                   build/html.zip
+            html${{ github.head_ref }}.${{ github.sha }}.zip
