--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,11 +24,18 @@ jobs:
     needs: build
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Create folder for download
+        run: mkdir ./artifacts
       - uses: actions/download-artifact@v5
         with:
           name: html${{ github.head_ref }}.${{ github.sha }}
-          path: ./
-
+          path: ./artifacts
+      
+      - name: Rename artifact
+        run: |
+          ls -R ./artifacts
+          for file in ./artifacts/*.zip; do [ -f "$file" ] && mv "$file" "./artifacts/html${{ github.head_ref }}.${{ github.sha }}.zip" && ls -R ./artifacts && break; done  
+          
       - name: Upload to itch
         uses: Ayowel/butler-to-itch@v1
         with:
@@ -37,4 +44,4 @@ jobs:
           itch_game: ${{ vars.ITCH_GAME }}
           version: ${{ github.ref_name }}
           files: |
-            html${{ github.head_ref }}.${{ github.sha }}.zip
+            ./artifacts/html${{ github.head_ref }}.${{ github.sha }}.zip
